welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:7: error: ';' expected but 'else' found.
	else return die1+die2
        ^